--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,22 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+:root{
+    --selected-color:#1DE90F;
+    --notSelected-color:#EB3737;
+    --updata-color:#4292D8;
+    --font-color:#fff;
+    --background-color:#F3F2F7;
+    --title-color:#4E4E4E;
+    
+  }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+
+  body{
+background-color: var(--background-color) !important;
+  }
+
+  .title{
+      text-align: center;
+      color: var(--title-color) !important;
+      font-weight: 800 !important;
+      font-size: 42px;
+      margin: 50px 0;
+  }
